# py-matrix

./: .gitignore  Makefile  Readme.md  matrix.py  pyneorain.py  pyproject.toml  requirements.txt  setup.py  syncrain.py  v2rain.py
config/: config.toml
