[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyneorain"
version = "2.0.1"
authors = [{name = "Ankit Gupta", email = "ankitgupta.work@gmail.com"}]
license = { text = "MIT" }
description = "Simple Matrix Rain"
dependencies = ["blessed", "six", "wcwidth", "toml"]
readme = "Readme.md"
scripts = {"pyneorain" = "pyneorain:main"}

[project.urls]
Home = "https://github.com/ankit-g/py-matrix/tree/async-scroll"
